# rust-os

./: Cargo.toml  README.md
.cargo/: config.toml
scripts/: run.sh
src/: allocator.rs  gdt.rs  interrupt.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  test.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
