[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"           # ^0.10 seems not compatible with current structure
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.2.7"
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33     # (0x10 << 1) | 1
