[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }           # ^0.10 seems not compatible with current structure
linked_list_allocator = "0.10.4"
pc-keyboard = "0.6.1"
pic8259 = "0.10.2"
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.2.7"
x86_64 = "0.14.10"

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.25"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 300              # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
